# NanoX

./: README.md  example.py  pyproject.toml
docs/Design/: DIG.md  FirstIteration.md
nanox/: __init__.py  nanox.py
nanox/model/: encoder.py  encoder_layer.py  layers.py  multihead_attention.py  pretained.py
