[tool.poetry]
name = "nanox"
version = "0.1.1"
description = "A transformer model for creating bio-compatible nanomachines"
authors = ["Kye Gomez <kye@apac.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"